@@ -4,6 +4,7 @@
 
 #### v1.2.14
 
+- Automatically runs `clink_start.cmd` from the binaries directory and/or the profile directory when Clink is injected.
 - Fixed [#130](https://github.com/chrisant996/clink/issues/130); doskey alias completions stop working when there are many aliases.
 
 #### v1.2.13
